improve comments look, improve responsiveness on mobile (fixed)

--- a/mod.css
+++ b/mod.css
@@ -56,3 +56,8 @@ hr {
 a:hover {
 	text-decoration: none;
 }
+
+#createpost {
+	max-width: 95%;
+	padding-bottom: 6em;
+}
